# apiserver

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: api.rs  database.rs  http.rs  main.rs  oauth.rs  user.rs
src/database/: guilds.rs  mod.rs  plugins.rs  tags.rs
src/db/: mod.rs  mongo.rs  redis.rs
src/models/: mod.rs  tag.rs  user.rs
static/: callback.html  plugins.json  settings.json
