[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["secrets", "json"]}
oauth2 = "4.1.0"
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
reqwest = "0.11.9"
dotenv = "0.15.0"
twilight-http = "0.9.1"
